-Adjusted sources to java 8